--- a/00-page-base/0.md
+++ b/00-page-base/0.md
@@ -1,1 +1,30 @@
-# 基础类型
+# Java 基础类型
+
+## Java一共有八种基本类型，分别为：
+* 整数型：
+> * byte
+> * short
+> * int
+> * long
+
+* 字符型：
+> * char
+* 浮点型：
+> * float
+> * double
+
+* 布尔型：
+> * boolean
+
+
+类型转换区分为：
+自动类型转换和强制类型转换
+
+当高精度转换为低精度的类型时，必须使用强制类型转换
+boolean 不能转换为其他的类型
+
+
+
+
+
+
