--- a/00-page-base/0.md
+++ b/00-page-base/0.md
@@ -1,19 +1,18 @@
 # Java 基础类型
-
-## Java一共有八种基本类型，分别为：
-* 整数型：
+Java一共有八种基本类型，分别为：
+## 整数型：
 > * byte
 > * short
 > * int
 > * long
 
-* 字符型：
+## 字符型：
 > * char
-* 浮点型：
+## 浮点型：
 > * float
 > * double
 
-* 布尔型：
+## 布尔型：
 > * boolean
 
 
